--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,15 @@ Lazarus/HproseLnet.pas
 *.ico
 *.identcache
 *.rsj
-
 *.~pas
-
-Test/HproseTest.exe
-
-Test/dunit.ini
+*.~dpr
+*.cfg
+*.exe
+*.deployproj
+*.dof
+*.stat
+dunit.ini
+__recovery
+Debug
+Release
+*.xml
